Fixing alignment

--- a/src/app/components/cards/CategorySelector.scss
+++ b/src/app/components/cards/CategorySelector.scss
@@ -8,3 +8,7 @@
     border-color: rgb(217, 217, 217) rgb(204, 204, 204) rgb(179, 179, 179) !important;
 }
 // TODO: Overwrite MultiSelect triangle button color with color specifiied in client_config
+
+.item-renderer input {
+    vertical-align: middle;
+}
